[package]
name = "model-fold"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-interner = "0.13.0"
nohash-hasher = "0.2.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"

[profile.release] 
opt-level = 3
overflow-checks = false
lto = true
codegen-units = 1
# panic = "abort"